# signal-ml-training

./: .gitignore  AGENTS.md  README.md  exercises.html  exercises.md  pyproject.toml
.progress/: overview.md
.progress/notes/: notebook-migration-audit-2026-04-22.md
.progress/tasks/: T001-material-layout-and-templates.md  (+32 more)
handouts/: 01-environment-and-workflow.md  01-onboarding.md  02-python-basics.md  02-python-script-basics.md  03-math-basics-numpy-matplotlib.md  04-differentiation-and-integration.md  05-linear-algebra.md  06-probability.md  07-fourier-and-stft-basics.md  07-signals-and-sampling.md  08-fourier-transform.md  09-image-data-basics.md  10-pytorch-model-dataset-basics.md  11-audio-signals.md  12-image-signals.md  13-image-baseline-mini-implementation.md  14-oral-check-and-repo-wrapup.md  15-annual-policy-and-roles.md  16-research-code-engineering-1.md  17-research-code-engineering-2.md  18-numerical-linear-algebra.md  19-autodiff-and-optimization.md  20-data-pipeline-engineering.md  21-image-model-basics.md  22-audio-representations-and-models.md  23-transfer-learning-and-fine-tuning.md  24-representation-learning.md  25-advanced-theme-framing.md  26-advanced-theme-comparison.md  27-advanced-theme-wrapup.md  28-technical-demo-and-walkthrough.md  README.md
latex/: .gitignore  README.md
materials/: README.md
templates/: autumn-session-template.md  session-template.md  spring-session-template.md
text/: 03_Reviewing_Elementary_Math_with_NumPy_and_Matplotlib.ipynb
textbook/: README.md  latexmkrc  main.tex  preamble.tex
(+100 files in other folders)
